--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,19 +8,20 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
-<body class="bg-blue-200">
+<body class="bg-blue-100">
 
-    <nav class="sticky top-0 z-50 bg-white border-gray-200 dark:bg-gray-900">
+    <nav class="sticky top-0 z-50 bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="https://png.pngtree.com/png-vector/20220711/ourmid/pngtree-automotive-car-logo-png-image_5837187.png"
                     class="h-16" alt="Flowbite Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-blue-400 ">ReCAR</span>
+                <span class="self-center text-2xl font-semibold whitespace-nowrap text-blue-400">ReCAR</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button"
-                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
                 aria-controls="navbar-default" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
                 <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -28,25 +30,25 @@
                         d="M1 1h15M1 7h15M1 13h15" />
                 </svg>
             </button>
-            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <div class="hidden w-full md:block md:w-auto bg-gray-900" id="navbar-default">
                 <ul
-                    class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                    class="bg-gray-900 absolute top-[79] right-0 left-0 md:static font-medium flex flex-col p-4 md:p-0 mt-4 bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 ">
                     <li>
                         <a href="#"
-                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Inicio</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-600 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Inicio</a>
                     </li>
                     <li>
                         <a href="#"
-                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-500 md:p-0"
                             aria-current="page">Reservas</a>
                     </li>
                     <li>
                         <a href="#"
-                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Precios</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-600 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Precios</a>
                     </li>
                     <li>
                         <a href="#"
-                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contacto</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-600 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -57,15 +59,15 @@
         <div id="default-carousel" class="relative w-full" data-carousel="slide">
             <div class="relative h-56 overflow-hidden md:h-96 border-none">
                 <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                    <img src="https://tn.com.ar/resizer/GVTEo1RtkOy30qPZEoMFdS0qHbA=/1023x0/smart/filters:format(webp)/cloudfront-us-east-1.images.arcpublishing.com/artear/7OO4H3HOFFFURMVMV7HXKPYXCM.jpg"
+                    <img src="assets/img/auto.jpg"
                         class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
                 </div>
                 <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                    <img src="https://tn.com.ar/resizer/E4eEmY9mQspN4cuu7OOOPnUeewI=/1440x0/smart/filters:format(webp)/cloudfront-us-east-1.images.arcpublishing.com/artear/4OF6XW2ADZDJLCVHO6K72RY3W4.jpg"
+                    <img src="assets/img/camioneta.jpg"
                         class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
                 </div>
                 <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                    <img src="https://p.vitalmx.com/photos/users/64/photos/42936/s1600_104085670_1294385603.jpg"
+                    <img src="assets/img/moto.jpg"
                         class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
                 </div>
             </div>
@@ -74,25 +76,24 @@
 
     <main class="mx-auto max-w-6xl mb-20">
 
-        <section class="mx-5">
-            <form class="max-w-md mx-auto mt-5">
-                <label for="default-search"
-                    class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Buscar</label>
-                <div class="relative">
-                    <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-                        </svg>
-                    </div>
-                    <input type="search" id="default-search"
-                        class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                        placeholder="Ingrese busqueda" required />
-                    <button type="submit"
-                        class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Buscar</button>
+        <section class="m-5">
+            <label for="inputSearch" class="mb-2 text-sm font-medium text-white sr-only">Buscar</label>
+            <div class="relative">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 20 20">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                    </svg>
                 </div>
-            </form>
+                <input type="search" id="inputSearch"
+                    class="block w-full p-4 ps-10 text-sm text-white border border-gray-300 rounded-lg bg-gray-900 focus:ring-blue-500 focus:border-blue-500"
+                    placeholder="Ingrese búsqueda" required />
+                <button type="button" id="btnClear"
+                    class="text-gray-700 absolute end-2.5 bottom-2.5 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2">Limpiar</button>
+                <button type="button" id="btnSearch"
+                    class="text-white absolute end-24 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  font-medium rounded-lg text-sm px-4 py-2">Buscar</button>
+            </div>
             <div class="text-center my-5 w-full">
                 <button class="bg-green-500 w-full sm:w-auto rounded-2xl px-3 py-2 text-white">
                     Agregar nueva reserva
@@ -101,58 +102,20 @@
         </section>
 
         <section class="mx-5">
-            <div class="grid grid-cols-12 gap-5 w-full">
-                <div class="col-span-12 md:col-span-6 lg:col-span-4">
-                    <div
-                        class="flex flex-col items-center w-full bg-white border border-gray-200 rounded-t-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-                        <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-                            src="https://tn.com.ar/resizer/GVTEo1RtkOy30qPZEoMFdS0qHbA=/1023x0/smart/filters:format(webp)/cloudfront-us-east-1.images.arcpublishing.com/artear/7OO4H3HOFFFURMVMV7HXKPYXCM.jpg"
-                            alt="">
-                        <div class="flex flex-col justify-between p-4 leading-normal w-full">
-                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                                Kevin</h5>
-                            <p class="font-normal text-gray-700 dark:text-gray-400">Vehiculo: Moto</p>
-                            <p class="font-normal text-gray-700 dark:text-gray-400">Costo: $2000</p>
-                            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Fecha: 17/10/2024</p>
-                        </div>
-                    </div>
-                    <button type="button"
-                        class="bg-red-600 text-center text-white rounded-b-lg w-full hover:bg-red-700">
-                        <span class="">CANCELAR</span>
-                    </button>
-                </div>
-                <div class="col-span-12 md:col-span-6 lg:col-span-4">
-                    <div
-                        class="flex flex-col items-center bg-white border border-gray-200 rounded-t-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-                        <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-                            src="https://tn.com.ar/resizer/GVTEo1RtkOy30qPZEoMFdS0qHbA=/1023x0/smart/filters:format(webp)/cloudfront-us-east-1.images.arcpublishing.com/artear/7OO4H3HOFFFURMVMV7HXKPYXCM.jpg"
-                            alt="">
-                        <div class="flex flex-col justify-between p-4 leading-normal w-full">
-                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                                Kevin</h5>
-                            <p class="font-normal text-gray-700 dark:text-gray-400">Vehiculo: Moto</p>
-                            <p class="font-normal text-gray-700 dark:text-gray-400">Costo: $2000</p>
-                            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Fecha: 17/10/2024</p>
-                        </div>
-                    </div>
-                    <button type="button"
-                        class="bg-red-600 text-center text-white rounded-b-lg w-full hover:bg-red-700">
-                        <span class="">CANCELAR</span>
-                    </button>
-                </div>
-            </div>
+            <div class="" id="dataReservas"></div>
         </section>
 
     </main>
 
-    <footer class="fixed bottom-0 right-0 left-0 bg-white shadow dark:bg-gray-800">
+    <footer class="fixed bottom-0 right-0 left-0 bg-gray-900">
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center justify-center text-center">
-            <span class="text-sm text-gray-500 text-center dark:text-gray-400">© 2024 <a href="https://flowbite.com/"
+            <span class="text-sm text-gray-200 text-center">© 2024 <a href="https://flowbite.com/"
                     class="hover:underline">Kevin Roth</a>. CoderHouse.
             </span>
         </div>
     </footer>
 
+    <script src="js/common.js"></script>
     <script src="js/app.js"></script>
 </body>
 
