Reserva de vehiculos+Roth

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                     class="text-white absolute end-24 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  font-medium rounded-lg text-sm px-4 py-2">Buscar</button>
             </div>
             <div class="text-center my-5 w-full">
-                <button class="bg-green-500 w-full sm:w-auto rounded-2xl px-3 py-2 text-white">
+                <button id="addReserva" type="button"
+                    class="bg-green-500 w-full sm:w-auto rounded-2xl px-3 py-2 text-white">
                     Agregar nueva reserva
                 </button>
             </div>
