--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                             class="block py-2 px-3 text-white rounded hover:bg-gray-600 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Inicio</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="index.html"
                             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-500 md:p-0"
                             aria-current="page">Reservas</a>
                     </li>
                     <li>
-                        <a href="#"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-600 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Precios</a>
+                        <a href="calendar.html"
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-600 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Calendario</a>
                     </li>
                     <li>
                         <a href="#"
@@ -108,16 +108,16 @@
 
     </main>
 
-    <footer class="fixed bottom-0 right-0 left-0 bg-gray-900">
+    <footer class="fixed bottom-0 right-0 left-0 bg-gray-900 z-50">
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center justify-center text-center">
-            <span class="text-sm text-gray-200 text-center">© 2024 <a href="https://flowbite.com/"
+            <span class="text-sm text-gray-200 text-center">© 2024 <a href="#"
                     class="hover:underline">Kevin Roth</a>. CoderHouse.
             </span>
         </div>
     </footer>
 
     <script src="js/common.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/reservas.js"></script>
 </body>
 
 </html>
