--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
         </div>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/reservas.js"></script>
 </body>
 
