--- a/index.html
+++ b/index.html
@@ -89,10 +89,6 @@
                 <input type="search" id="inputSearch"
                     class="block w-full p-4 ps-10 text-sm text-white border border-gray-300 rounded-lg bg-gray-900 focus:ring-blue-500 focus:border-blue-500"
                     placeholder="Ingrese búsqueda" required />
-                <button type="button" id="btnClear"
-                    class="text-gray-700 absolute end-2.5 bottom-2.5 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2">Limpiar</button>
-                <button type="button" id="btnSearch"
-                    class="text-white absolute end-24 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  font-medium rounded-lg text-sm px-4 py-2">Buscar</button>
             </div>
             <div class="text-center my-5 w-full">
                 <button id="addReserva" type="button"
@@ -110,8 +106,8 @@
 
     <footer class="fixed bottom-0 right-0 left-0 bg-gray-900 z-50">
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center justify-center text-center">
-            <span class="text-sm text-gray-200 text-center">© 2024 <a href="#"
-                    class="hover:underline">Kevin Roth</a>. CoderHouse.
+            <span class="text-sm text-gray-200 text-center">© 2024 <a href="#" class="hover:underline">Kevin Roth</a>.
+                CoderHouse.
             </span>
         </div>
     </footer>
